src/imports/server-cleanup-log.txt
Last login: Tue Mar  3 12:14:28 on ttys002
/Users/aritzarrieta/.zprofile:1: no such file or directory: /opt/homebrew/bin/brew
/Users/aritzarrieta/.zprofile:2: no such file or directory: /usr/local/bin/brew
aritzarrieta@MBP-de-Aritz ~ % ssh root@94.143.141.241
root@94.143.141.241's password: 
Welcome to Ubuntu 24.04.4 LTS (GNU/Linux 6.8.0-101-generic x86_64)

 * Documentation:  https://help.ubuntu.com
 * Management:     https://landscape.canonical.com
 * Support:        https://ubuntu.com/pro

 System information as of Tue Mar  3 12:31:38 UTC 2026

  System load:  0.0               Processes:             112
  Usage of /:   6.0% of 76.45GB   Users logged in:       1
  Memory usage: 47%               IPv4 address for ens6: 94.143.141.241
  Swap usage:   0%

 * Strictly confined Kubernetes makes edge and IoT secure. Learn how MicroK8s
   just raised the bar for easy, resilient and secure K8s cluster deployment.

   https://ubuntu.com/engage/secure-kubernetes-at-the-edge

Expanded Security Maintenance for Applications is not enabled.

0 updates can be applied immediately.

Enable ESM Apps to receive additional future security updates.
See https://ubuntu.com/esm or run: sudo pro status


Last login: Tue Mar  3 11:15:09 2026 from 207.188.130.38
root@ubuntu:~# cd /var/www/bigartist_backup_20260302_174903/server

echo "=========================================="
echo "🔧 ELIMINANDO CÓDIGO SOBRANTE"
echo "=========================================="

# Backup
cp server.js server.js.backup_cleanup_$(date +%Y%m%d_%H%M%S)

# Ver las líneas problemáticas primero
echo "Código actual alrededor de la línea 200:"
sed -n '195,205p' server.js | cat -n

echo ""
echo "Buscando y eliminando llaves extra..."

# Método directo: eliminar las líneas 197-198 si contienen solo llaves
sed -i '197,198{/^[[:space:]]*}[[:space:]]*$/d;}' server.js

echo "Verificando sintaxis..."
if node -c server.js 2>/dev/null; then
  echo "✅ Sintaxis correcta"
else
  echo "⚠️  Primer intento falló. Mostrando error:"
echo "✅ PROCESO COMPLETADO"ines 10 --nostreamcks \mpty')}')uth/login \ echo "❌
==========================================
🔧 ELIMINANDO CÓDIGO SOBRANTE
==========================================
Código actual alrededor de la línea 200:
     1	});
     2	
     3	
     4	
     5	
     6	  }
     7	});
     8	
     9	app.post('/api/royalties/import', authenticateToken, upload.single('csv'), async (req, res) => {
    10	  if (!req.file) {
    11	    return res.status(400).json({ success: false, message: 'No se proporciono archivo' });

Buscando y eliminando llaves extra...
Verificando sintaxis...
⚠️  Primer intento falló. Mostrando error:
/var/www/bigartist_backup_20260302_174903/server/server.js:200
  }
  ^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v20.20.0

Mostrando líneas 195-210 para inspección manual:
     1	});
     2	
     3	
     4	
     5	
     6	  }
     7	});
     8	
     9	app.post('/api/royalties/import', authenticateToken, upload.single('csv'), async (req, res) => {
    10	  if (!req.file) {
    11	    return res.status(400).json({ success: false, message: 'No se proporciono archivo' });
    12	  }
    13	
    14	  const filePath = req.file.path;
    15	  const scriptPath = path.join(__dirname, 'scripts', 'importCSV.js');
    16	

Eliminando línea específica que contiene solo '  }'...
❌ Necesitamos inspección manual

🔄 Reiniciando PM2...
Use --update-env to update environment variables
[PM2] Applying action restartProcessId on app [bigartist-api](ids: [ 0 ])
[PM2] [bigartist-api](0) ✓
┌────┬────────────────────┬──────────┬──────┬───────────┬──────────┬──────────┐
│ id │ name               │ mode     │ ↺    │ status    │ cpu      │ memory   │
├────┼────────────────────┼──────────┼──────┼───────────┼──────────┼──────────┤
│ 0  │ bigartist-api      │ fork     │ 64   │ online    │ 0%       │ 17.5mb   │
└────┴────────────────────┴──────────┴──────┴───────────┴──────────┴──────────┘

🧪 Probando login...
❌ Login aún falla. Ver logs:
[TAILING] Tailing last 10 lines for [bigartist-api] process (change the value with --lines option)
/root/.pm2/logs/bigartist-api-out.log last 10 lines:
0|bigartis | 🔐 Verificando token...
0|bigartis | 📋 Authorization header: Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MywiZW1haWwiOiJhZG1pbkBiaWdhcnRpc3QuZXMiLCJyb2xlIjoiYWRtaW4iLCJpYXQiOjE3NzI0NzA3MDksImV4cCI6MTc3MjU1NzEwOX0.64qzSyFwcUMARvG5KsDIe-s7sUHuGl6W8wP-q2xqSB4
0|bigartis | 🔑 Token extraído: eyJhbGciOiJIUzI1NiIs...
0|bigartis | ✅ Token válido para usuario: 3
0|bigartis | Servidor corriendo en puerto 3001
0|bigartis | Servidor corriendo en puerto 3001
0|bigartis | Servidor corriendo en puerto 3001
0|bigartis | Servidor corriendo en puerto 3001
0|bigartis | Servidor corriendo en puerto 3001
0|bigartis | Servidor corriendo en puerto 3001

/root/.pm2/logs/bigartist-api-error.log last 10 lines:
0|bigartis |     at wrapSafe (node:internal/modules/cjs/loader:1464:18)
0|bigartis |     at Module._compile (node:internal/modules/cjs/loader:1495:20)
0|bigartis |     at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
0|bigartis |     at Module.load (node:internal/modules/cjs/loader:1266:32)
0|bigartis |     at Module._load (node:internal/modules/cjs/loader:1091:12)
0|bigartis |     at Object.<anonymous> (/usr/lib/node_modules/pm2/lib/ProcessContainerFork.js:33:23)
0|bigartis |     at Module._compile (node:internal/modules/cjs/loader:1521:14)
0|bigartis |     at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
0|bigartis |     at Module.load (node:internal/modules/cjs/loader:1266:32)
0|bigartis |     at Module._load (node:internal/modules/cjs/loader:1091:12)


✅ PROCESO COMPLETADO
root@ubuntu:/var/www/bigartist_backup_20260302_174903/server# 
